tests/NormalTests/paczka1/small_fuzzy/10654483.err
Error in line 1: Z9x A506 87,9
Error in line 8: ZlGrCXJLK S462 25,8
